--- a/modelproject/det_fra_mathias4.ipynb
+++ b/modelproject/det_fra_mathias4.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
     "    ax.plot(ekc_calc, label='$\\\\alpha \\cdot s \\cdot(1-\\\\theta)\\cdot k^{\\\\alpha-1}$'); # create surface plot in the axis\n",
     "    ax.set_xlim([0,50]) # fixed x range\n",
     "    ax.set_ylim([0,0.1])\n",
-    "    #ax.set_yticklabels([])\n",
+    "    ax.set_yticklabels([])\n",
     "    plt.legend()\n",
     "\n",
     "    \n",
@@ -329,13 +329,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f4c1b52cd9846bea226064c3fbd70a1",
+       "model_id": "ec5ca6e19eb74dd7b83ea24a3670a9a0",
        "version_major": 2,
        "version_minor": 0
       },
