--- a/modelproject/det_fra_mathias7.ipynb
+++ b/modelproject/det_fra_mathias7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "806 ns ± 8.29 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "1.1 µs ± 5.91 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
     "tcc\n",
     "\n",
     "tc_func = sm.lambdify((s,g_b,n,delta,alpha,theta),tcc)\n",
-    "%timeit tc_func(0.25,0.015,0.01,0.035,0.25,0.05)\n"
+    "tc_func(0.25,0.015,0.01,0.035,0.25,0.05)\n"
    ]
   },
   {
