--- a/modelproject/det_fra_.ipynb
+++ b/modelproject/det_fra_.ipynb
@@ -16,7 +16,8 @@
     "import ipywidgets as widgets\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets\n",
+    "from IPython.display import Image"
    ]
   },
   {
