--- a/modelproject/modelproject_2.0.ipynb
+++ b/modelproject/modelproject_2.0.ipynb
@@ -52,9 +52,9 @@
     "\n",
     "\\begin{align}\n",
     "    & Q = F(K,BL) = K^{\\alpha}BL^{1-\\alpha}, \\quad 1>\\alpha>0 \\quad \\quad (1) \\\\\n",
-    "    & \\dot{K} = sY - \\delta K \\\\ \n",
-    "    & \\dot{L} = nL \\Rightarrow L=L_0 e^{nt} \\\\\n",
-    "    & \\dot{B} = g_BB \\Rightarrow B=B_0 e^{g_Bt}, \\quad 1>g_B>0\n",
+    "    & \\dot{K} = sY - \\delta K \\quad \\quad (2) \\\\ \n",
+    "    & \\dot{L} = nL \\Rightarrow L=L_0 e^{nt} \\quad \\quad (3) \\\\\n",
+    "    & \\dot{B} = g_BB \\Rightarrow B=B_0 e^{g_Bt}, \\quad 1>g_B>0 \\quad \\quad (4) \n",
     "\\end{align}\n",
     "\n",
     "The first equation shows a simple Cobb-Douglas production function where the production of gross output, Q, is made through Capital, K, and effective labour, BL. It can be shown that the production function exhibits constant return to scale.\n",
@@ -65,7 +65,7 @@
     "In this assignment we will be working with an exstention of the original Solow model. Namely, we will work with the Green Solow model developed by William A. Brock and M. Scott Taylor (2004). In their model they add a function describing total emissions, E, given by:\n",
     "\n",
     "\\begin{align}\n",
-    "E=\\Omega Q-\\Omega A(Q,R)\n",
+    "E=\\Omega Q-\\Omega A(Q,R) \\quad \\quad (5) \n",
     "\\end{align}\n",
     "\n",
     "This simply shows that total emissions is given by the amount of pullution produced minus the amount of pollution abated.  \n",
@@ -76,15 +76,15 @@
     "When considering the Green Solow model there must be a lower amount available for consumption and investment due to the inclusion of abatement. We define this net output (income) as Y:  \n",
     "\n",
     "\\begin{align}\n",
-    "Y=Q-R=(1-\\theta)Q\n",
+    "Y=Q-R=(1-\\theta)Q \\quad \\quad (6) \n",
     "\\end{align}\n",
     "\n",
     "We can rewrite this in order to understand how emissions are being affected in the Green Solow model.\n",
     "\n",
     "\\begin{align}\n",
-    "    &E=\\Omega (Q-A(Q,R))\\\\  \n",
-    "    &E=\\Omega Q(1-A(1,\\frac{R}{Q})\\\\  \n",
-    "    &E=\\Omega Q \\alpha(\\theta), \\quad \\theta \\equiv \\frac{R}{Q} \\quad \\alpha(\\theta) \\equiv 1-A(1,\\theta)\\\\\n",
+    "    &E=\\Omega (Q-A(Q,R)) \\quad \\quad (7) \\\\  \n",
+    "    &E=\\Omega Q(1-A(1,\\frac{R}{Q}) \\quad \\quad (8) \\\\  \n",
+    "    &E=\\Omega Q \\alpha(\\theta), \\quad \\theta \\equiv \\frac{R}{Q} \\quad \\alpha(\\theta) \\equiv 1-A(1,\\theta) \\quad \\quad (9) \\\\\n",
     "\\end{align}\n",
     "\n",
     "\n",
@@ -93,25 +93,25 @@
     "We are able to derive the model in output per effective worker since the production function has constant returns to scale. This implies that: \n",
     "\n",
     "\\begin{align}\n",
-    "Q=K^\\alpha (BL)^{1-\\alpha} \\Rightarrow q=k^\\alpha \\quad q\\equiv \\frac{Q}{BL},\\quad k\\equiv \\frac{K}{BL}\n",
+    "Q=K^\\alpha (BL)^{1-\\alpha} \\Rightarrow q=k^\\alpha \\quad q\\equiv \\frac{Q}{BL},\\quad k\\equiv \\frac{K}{BL} \\quad \\quad (10) \n",
     "\\end{align}\n",
     "\n",
     "Using the above definitons we are now able to calculate the transition equation for capital per effective worker. When using the second equation and **the definitons just given** we get the following transition equation for capital per effective worker:  \n",
     "\n",
     "\\begin{align}\n",
-    "\\dot{k}=s(1-\\theta)k^\\alpha-k(\\delta+g_B+n)$\n",
+    "\\dot{k}=s(1-\\theta)k^\\alpha-k(\\delta+g_B+n) \\quad \\quad (11) \n",
     "\\end{align}\n",
     "\n",
     "It can be shown that the growth rate for total emissions is given by:\n",
     "\n",
     "\\begin{align}\n",
-    "\\frac{\\dot{E}}{E}=g_E+\\alpha \\frac{\\dot{k}}{k}, \\quad; g_E\\equiv g_B+n-g_A\n",
+    "\\frac{\\dot{E}}{E}=g_E+\\alpha \\frac{\\dot{k}}{k}, \\quad; g_E\\equiv g_B+n-g_A \\quad \\quad (12) \n",
     "\\end{align}\n",
     "\n",
     "When substituting for $\\frac{\\dot{k}}{k}$ we get:\n",
     "\n",
     "\\begin{align}\n",
-    "\\frac{\\dot{E}}{E}=\\alpha s(1-\\theta)k^{\\alpha-1}-[\\alpha(\\delta+g_B+n)-g_E]\n",
+    "\\frac{\\dot{E}}{E}=\\alpha s(1-\\theta)k^{\\alpha-1}-[\\alpha(\\delta+g_B+n)-g_E] \\quad \\quad (13) \n",
     "\\end{align}\n",
     "\n",
     "When considering this equation we notice that the emissions will peak ($\\dot{E}=0$) when $\\alpha s(1-\\theta)k^{\\alpha-1}=[\\alpha(\\delta+g_B+n)-g_E]$\n",
@@ -120,7 +120,7 @@
     "Brock and Taylor (2004) define sustainable growth as a situation where the growth rate of net output per capita is positive, while the growth rate of total emissions is negative\n",
     "\n",
     "\\begin{align}\n",
-    "    \\dot{y}>0 \\quad \\wedge \\quad \\dot{E}<0\n",
+    "    \\dot{y}>0 \\quad \\wedge \\quad \\dot{E}<0 \\quad \\quad (14) \n",
     "\\end{align}\n",
     "\n",
     "It is possible to establish conditions that will secure that sustainable growth occurs within the Green Solow model.\n",
@@ -128,25 +128,25 @@
     "From the equations defined in the Green Solow model it can be shown that the growth rate of y must be given by: \n",
     "\n",
     "\\begin{align}\n",
-    "    \\frac{\\dot{y}}{y} = g_B+\\alpha \\frac{\\dot{k}}{k}\n",
+    "    \\frac{\\dot{y}}{y} = g_B+\\alpha \\frac{\\dot{k}}{k} \\quad \\quad (16) \n",
     "\\end{align}\n",
     "\n",
     "Brock and Taylor also present a growth for total emission, which is given by: \n",
     "\n",
     "\\begin{align}\n",
-    "    \\frac{\\dot{E}}{E} = g_E +\\alpha \\frac{\\dot{k}}{k}, \\quad g_E \\equiv g_B+n-g_A \n",
+    "    \\frac{\\dot{E}}{E} = g_E +\\alpha \\frac{\\dot{k}}{k}, \\quad g_E \\equiv g_B+n-g_A  \\quad \\quad (17) \n",
     "\\end{align}\n",
     "\n",
     "In steady state $\\dot{k}=0$. When applying this we get the following growth rates on the balanced growth path:\n",
     "\n",
     "\\begin{align}\n",
-    "    & \\frac{\\dot{y}}{y}=g_B  \\qquad , \\qquad  \\frac{\\dot{E}}{E}=g_E\n",
+    "    & \\frac{\\dot{y}}{y}=g_B  \\qquad , \\qquad  \\frac{\\dot{E}}{E}=g_E \\quad \\quad (18) \n",
     "\\end{align}\n",
     "\n",
     "We can thereby conclude that sustainable growth is secured  when \n",
     "\n",
     "\\begin{align}\n",
-    "    & g_B > 0 \\qquad \\wedge \\qquad  \\underbrace{g_A}_{\\text{Technique effect}} > \\underbrace{g_B + n}_{\\text{Scale effect}}\n",
+    "    & g_B > 0 \\qquad \\wedge \\qquad  \\underbrace{g_A}_{\\text{Technique effect}} > \\underbrace{g_B + n}_{\\text{Scale effect}} \\quad \\quad (19) \n",
     "\\end{align}\n",
     "\n",
     "We note that technological growth in the production of net output is positive by assumption. However, from the second condition we see that the technological growth in abatement must be larger than the technological growth in the production of gross output plus the population growth rate. The term $n+g_B$ can be defined as the scale effect, as this measures the rate at which aggregate gross output grows. The term $g_A$ is defined as the technological progress in abatement, which reflects the technique effect.  \n",
@@ -405,7 +405,7 @@
     "## 2. Emissions in the Green Solow Model\n",
     "\n",
     "### 2.1 Peak of Emmisions\n",
-    "The Green Solow Model also predicts when the peak of emission occur depending on the abatement intensity, $\\theta$. In the following,  we solve for k, at the peak of emissions like we did with the transitions equation. We use the emission euqation (...) for this. As emissions over time does not change at the peak we set $\\dot{E}$ equal zero.\n",
+    "The Green Solow Model also predicts when the peak of emission occur depending on the abatement intensity, $\\theta$. In the following,  we solve for k, at the peak of emissions like we did with the transitions equation. We use the emission euqation (13) for this. As emissions over time does not change at the peak we set $\\dot{E}$ equal zero.\n",
     "We choose only to use an analytical solution when solving for k at the peak of emissions."
    ]
   },
@@ -679,20 +679,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see how the Green Solow model can trace out an EKC relationship, we use equation (11) and (16). From these equations it is possible to link the dynamics of capital accumulation with the evolution of total emissions. In the figure above we have capital per effective worker on the horizontal axis, while we have the rates of change of $\\alpha$ times capital per effective worker ($\\alpha \\frac{\\dot{k}}{k}$) and the flow of emissions ($\\dot{E}/E$) on the vertical axis. \n",
-    "We refer to the down-sloping function $\\alpha s (1-\\theta)k^{\\alpha - 1}$ as the savings locus, as it is shifted to the left and right when s goes down or up respectively. The savings locus will start at infinity and converge towards 0 as capital per effective worker increases. Hence, the rates of change for emissions will be high at a low k, and the rates of change for emissions will decrease when k increases. The same goes for capital per effective worker. As the savings locus is downward sloping, it must be the case that it intersects the two points T and B. Point T refers to the turning point for emissions, and point B refers to the steady state value for capital per effective worker. To verify that T and B represent these two points we note from equation (16) that when emissions peak ($\\dot{E} = 0$) then \n",
+    "To see how the Green Solow model can trace out an EKC relationship, we use equation (11) and (17). From these equations it is possible to link the dynamics of capital accumulation with the evolution of total emissions. In the figure above we have capital per effective worker on the horizontal axis, while we have the rates of change of $\\alpha$ times capital per effective worker ($\\alpha \\frac{\\dot{k}}{k}$) and the flow of emissions ($\\dot{E}/E$) on the vertical axis. \n",
+    "We refer to the down-sloping function $\\alpha s (1-\\theta)k^{\\alpha - 1}$ as the savings locus, as it is shifted to the left and right when s goes down or up respectively. The savings locus will start at infinity and converge towards 0 as capital per effective worker increases. Hence, the rates of change for emissions will be high at a low k, and the rates of change for emissions will decrease when k increases. The same goes for capital per effective worker. As the savings locus is downward sloping, it must be the case that it intersects the two points T and B. Point T refers to the turning point for emissions, and point B refers to the steady state value for capital per effective worker. To verify that T and B represent these two points we note from equation (17) that when emissions peak ($\\dot{E} = 0$) then \n",
+    "\n",
     "\\begin{align}\n",
-    "    \\frac{\\dot{E}}{E} = g_E +\\alpha (s(1-\\theta)k^{\\alpha-1}-(\\delta+g_B+n)) = 0 => \\alpha s(1-\\theta)k^{\\alpha-1} = \\alpha(\\delta+g_B+n) -g_E  \n",
+    "    \\frac{\\dot{E}}{E} = g_E +\\alpha (s(1-\\theta)k^{\\alpha-1}-(\\delta+g_B+n)) = 0 => \\alpha s(1-\\theta)k^{\\alpha-1} = \\alpha(\\delta+g_B+n) -g_E  \\quad \\quad (20) \n",
     "\\end{align}\n",
-    "This is what happens at point T. From equation (19) it is apparent that to the left of point T the growth rate of emissions will be positive and to the right of point T the growth rate of emissions will be negative. Hence, point T must represent a turning point for total emissions. Looking at the horizontal line of $\\alpha (\\delta + g_B + n)$ we see that the vertical distance between the two curves must be $\\alpha \\frac{\\dot{k}}{k}$. This is seen as\n",
+    "\n",
+    "This is what happens at point T. From equation (20) it is apparent that to the left of point T the growth rate of emissions will be positive and to the right of point T the growth rate of emissions will be negative. Hence, point T must represent a turning point for total emissions. Looking at the horizontal line of $\\alpha (\\delta + g_B + n)$ we see that the vertical distance between the two curves must be $\\alpha \\frac{\\dot{k}}{k}$. This is seen as\n",
+    "\n",
     "\\begin{align*}\n",
-    "    \\alpha\\frac{\\dot{k}}{k}=\\alpha s(1-\\theta)k^{\\alpha-1}- \\alpha (\\delta+g_B+n) \n",
+    "    \\alpha\\frac{\\dot{k}}{k}=\\alpha s(1-\\theta)k^{\\alpha-1}- \\alpha (\\delta+g_B+n) \\quad \\quad (21) \n",
     "\\end{align*}\n",
+    "\n",
     "In steady state $\\dot{k}=0$ such that\n",
+    "\n",
     "\\begin{align*}\n",
-    "    \\alpha\\frac{\\dot{k}}{k}=\\alpha s(1-\\theta)k^{\\alpha-1}- \\alpha (\\delta+g_B+n) =0 \\Rightarrow \\alpha s(1-\\theta)k^{\\alpha-1} = \\alpha (\\delta+g_B+n)\n",
+    "    \\alpha\\frac{\\dot{k}}{k}=\\alpha s(1-\\theta)k^{\\alpha-1}- \\alpha (\\delta+g_B+n) =0 \\Rightarrow \\alpha s(1-\\theta)k^{\\alpha-1} = \\alpha (\\delta+g_B+n) \\quad \\quad (22) \n",
     "\\end{align*}\n",
-    "And we therefore conclude that point B represents the steady state level for capital per effective worker. It must be the case that k is rising to the left of B but falling to the right of B. We see that when k is small there must be a rapid growth in capital per effective worker but this growth rate falls as k approaches its steady state level. This dynamic is transferred to the growth dynamics of emissions, due to $g_E$ being constant in equation (16).    \n",
+    "\n",
+    "And we therefore conclude that point B represents the steady state level for capital per effective worker. It must be the case that k is rising to the left of B but falling to the right of B. We see that when k is small there must be a rapid growth in capital per effective worker but this growth rate falls as k approaches its steady state level. This dynamic is transferred to the growth dynamics of emissions, due to $g_E$ being constant in equation (17).    \n",
     "\n",
     "\n",
     "\n",
