--- a/modelproject/modelproject_2.0.ipynb
+++ b/modelproject/modelproject_2.0.ipynb
@@ -9,15 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Importing packages \n",
+    "## Importing packages for use in our model project\n",
     "\n",
     "import numpy as np\n",
     "from scipy import optimize\n",
     "import sympy as sm\n",
+    "# Math-style printing\n",
     "sm.init_printing(use_unicode=True)\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
@@ -29,11 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Running python file to define variables\n",
+    "#Running python file to define variables. The two first lines of the .py file are:\n",
+    "# import sympy as sm\n",
+    "# K = sm.symbols('K') \n",
+    "# The variables definitions are left in the .py file, as the cell would be quite large otherwise.\n",
     "exec(open(\"Def_variables.py\").read())"
    ]
   },
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,19 +186,23 @@
        "⎣⎝δ + g_B + n⎠     ⎦"
       ]
      },
-     "execution_count": 165,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Stating the transition equation and setting it equal to zero\n",
+    "\n",
+    "# Standard per effective capita production function\n",
     "f=k**alpha\n",
+    "\n",
+    "# We define the transition equation as a sympy equation. \n",
     "tc=sm.Eq(0,(s*(1-theta)*k**alpha-(delta+g_B+n)*k))\n",
     "\n",
-    "# Solving the transition equation (tc) for k\n",
+    "# Solving the transition equation (tc) for k using the sympy solve function.\n",
     "tcc=sm.solve(tc,k)\n",
-    "tcc\n"
+    "# Display the steady state value for k\n",
+    "display(tcc)\n"
    ]
   },
   {
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +228,18 @@
        "[6.261568722311015]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Converting our tcc sympy function into a lambda function, making it possible to calculate a numerical value solution.\n",
+    "# Converting our tcc sympy function into a standard \n",
+    "# python function, making it possible to calculate a numerical value solution.\n",
     "tc_func = sm.lambdify((s,g_B,n,delta,alpha,theta),tcc)\n",
     "    \n",
-    "# Adding numerical values to our parameters\n",
+    "# Adding numerical values to our parameters to calculate the steady state value. \n",
+    "# It is crucial that the ordering of the variables align with the lambdified function ordering of variables.\n",
     "tc_func(0.25,0.015,0.01,0.035,0.25,0.05)"
    ]
   },
@@ -237,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In steady state capital is equal to 6.26."
+    "In steady state capital per effective worker is equal to 6.26."
    ]
   },
   {
@@ -246,12 +256,12 @@
    "source": [
     "### 1.2 Numerical Solution\n",
     "\n",
-    "We also try to solve for capital in the steady state analytically."
+    "We also try to solve for capital in the steady state using numerical optimization."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -264,19 +274,24 @@
        "6.261568722311015"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Running python file to define parameter values\n",
+    "#Running python file to define parameter values. The two first lines of the .py file are:\n",
+    "# s = 0.25\n",
+    "# g_B = 0.015\n",
+    "# The value definitions are left in the .py file, as the cell would be quite large otherwise.\n",
+    "\n",
     "exec(open(\"Def_values.py\").read())\n",
     "\n",
     "# Defining our steady state as a lambda function\n",
     "obj_kss = lambda k: 0 - (s*(1-theta)*k**alpha-(delta+g_B+n)*k)\n",
     "\n",
     "# optimize.newton uses a numerical solution to find a numerical value solution to our steady state\n",
+    "# We do not give the algorithm any of the derivatives, and therefore the standard methods from the optimize.newton are used.\n",
     "result = optimize.newton(obj_kss,x0=1)\n",
     "result"
    ]
@@ -285,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The numerical solution is as expected the same as the analytical.\n",
+    "The numerical solution is as expected the same as the analytical. Our methods seems to be robust.\n",
     "\n",
     "### 1.3 Transition Diagram\n",
     "\n",
@@ -296,27 +311,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Defining the investment per worker function, which calculates the saving/investment locus.\n",
+    "# The function has 4 inputs. K is the vector to calculate values on, theta, alpha and s are parameters.\n",
+    "# The parameters can be left out, but in order to make it interactive we keep them as inputs in the function.\n",
     "def invest_per_work2(k, theta,alpha,s):\n",
     "    return (s*(1-theta)*k**alpha)\n",
     "\n",
-    "# The break even equation does not depend on any of the parameters we have set for our widget. \n",
-    "# The point where the two functions intersect is the steady state value of k\n",
+    "# The break even equation does not depend on any of the parameters we have set for our widget.\n",
+    "# No need to include them in the inputs.\n",
+    "# The point where the two functions intersect is the steady state value of k.\n",
     "def break_even(k):\n",
     "    return (delta+g_B+n)*k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defining the k values of the function\n",
+    "# Defining the k values of the function. This is used as inputs to calculate the investment per worker and break even.\n",
     "x_vec = np.linspace(0,50,50)"
    ]
   },
@@ -329,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +363,7 @@
     "    ax.plot(investment, label='$s \\cdot (1-\\\\theta)\\cdot k^\\\\alpha $'); # plot and label\n",
     "    ax.set_xlim([0,50]) # fixed x range\n",
     "    ax.set_yticklabels([]) #remove y-labes\n",
-    "    plt.legend() # plot the labels in the legend\n"
+    "    plt.legend() # plot the labels in the legend"
    ]
   },
   {
@@ -357,13 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30556cf6e5c3483986d0ccf0d9a9ed77",
+       "model_id": "c4913865a585489ba6ea72d7c079538f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The intersect of the two curves illustrates the steady state. It is evident from the figure that if the entire gross product is spent on abatament, i.e. $\\theta=1$, then the economy will implode, since there is no accumulation of capital. The lower the abatement intensity the higher the level of capital will be in steady state. However, a low level of abatement may cause irreversible damage to the environment making the economy implode before the the steady state is reached.\n",
+    "The intersection of the two curves illustrates the steady state. It is evident from the figure that if the entire gross product is spent on abatament, i.e. $\\theta=1$, then the economy will implode, since there is no accumulation of capital. The lower the abatement intensity the higher the level of capital will be in steady state. However, a low level of abatement may cause irreversible damage to the environment making the economy implode before the the steady state is reached.\n",
     "A larger saving also increase the capital in the steady state. This is logical since a higher savings rate implies a higher accumulation of capital."
    ]
   },
@@ -411,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,10 +463,10 @@
     }
    ],
    "source": [
-    "# Stating the emision equation and setting it equal to zero\n",
+    "# Stating the emision equation and setting it equal to zero. We state is a sympy function.\n",
     "max_emis=sm.Eq(0,(alpha*s*(1-theta)*k**(alpha-1)-(alpha*(delta+g_B+n)-(g_B+n-g_A))))\n",
     "\n",
-    "# Solving the emission equation (max_emis) for k\n",
+    "# Solving the emission equation (max_emis) for k using sympy.solve.\n",
     "max_emis_k=sm.solve(max_emis,k)\n",
     "max_emis_k\n"
    ]
@@ -523,6 +541,8 @@
     }
    ],
    "source": [
+    "# We show an image Environmental Kuznets Curve. The image is imported and displayed. An obvious extension would be to calculate \n",
+    "# the Kuznets Curve by ourself. This is however quite complicated.\n",
     "Image(filename=\"Kuznetz_Curve.png\")"
    ]
   },
@@ -530,12 +550,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We would like to illustrate how the Environmental Kuznetz Curve is derived. First we define functions to use in the plot."
+    "We would like to illustrate how the Environmental Kuznetz Curve is derived however. First we define functions to use in the plot."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,11 +565,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the change of emissions for different k values  \n",
+    "# Calculate the change of emissions for different k values. K vector to calculate values from, other variables are included\n",
+    "# as inputs for interactive purposes.\n",
     "def ekc(k, theta,s):\n",
     "    return (alpha*s*(1-theta)*k**(alpha-1))\n",
     "\n",
@@ -577,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,13 +664,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efe0f7c2de47415994d8f5a8a530fa71",
+       "model_id": "8d2e810288474f609d339831673bf0af",
        "version_major": 2,
        "version_minor": 0
       },
